tests/invalid/invalid-indentation.orgs
process InvalidIndentation

   when lead.created
  assign lead.status = "qualified"
